--- a/models/DAF/config.yaml
+++ b/models/DAF/config.yaml
@@ -1,8 +1,9 @@
-iter_num: 60
-train_batch_size: 4
+iter_num: 10
+train_batch_size: 3
 lr: 0.005
-lr_step: 20
+lr_step: 5
 lr_decay: 50
 weight_decay: 0.01
 momentum: 0.9
-resize: False
+resize: True
+resizeTo: 448
