--- a/models/UNETplusplus/config.yaml
+++ b/models/UNETplusplus/config.yaml
@@ -1,8 +1,9 @@
 iter_num: 60
-train_batch_size: 2
-lr: 0.005
+train_batch_size: 8
+lr: 0.002
 lr_step: 20
 lr_decay: 50
 weight_decay: 0.01
 momentum: 0.9
 resize: True
+resizeTo: 224
